--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
   },
   "dependencies": {
     "next": "10.1.2",
+    "next-auth": "^3.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/next": "^9.0.0",
+    "@types/next-auth": "^3.13.0",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.9",
+    "tailwindcss": "^2.0.4",
+    "typescript": "^4.2.3"
   }
 }
