--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/mongodb": "^3.6.11",
+    "axios": "^0.21.1",
+    "mongodb": "^3.6.5",
     "next": "10.1.2",
     "next-auth": "^3.13.3",
     "react": "17.0.2",
