--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "mongodb": "^3.6.5",
     "next": "10.1.2",
     "next-auth": "^3.13.3",
+    "query": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
